@@ -45,9 +45,6 @@ exception statement from your version. */
 MainThreadInterface *mainThread;
 QApplication *qApplication;
 
-#if defined(Q_WS_X11)
-extern void qt_x11_set_global_double_buffer( bool );
-#endif
 
 /**
  * Starts up a QApplication
@@ -91,11 +88,6 @@ JNIEXPORT jlong JNICALL Java_gnu_java_awt_peer_qt_MainQtThread_init
   jclass cls = env->GetObjectClass(obj);
   jfieldID nofid = env->GetFieldID( cls, "mainThreadInterface", "J" );
   env->SetLongField( obj, nofid, (jlong)mainThread );
-
-#if defined(Q_WS_X11)
-  // turn off double-buffering.
-  qt_x11_set_global_double_buffer( (doublebuffer == JNI_TRUE) );
-#endif
 
   return (jlong)qtApp;
 }
